--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>22FebEnable2Prac1</groupId>
 	<artifactId>22FebEnable2Prac1</artifactId>
-	<version>1.0.0</version>
-	
-<!--	<distributionManagement>
+	<version>1.1.0</version>
+	<!--	<distributionManagement>
 		<repository>
 			<id>internal.repo</id>
 			<name>Internal repo</name>
@@ -20,18 +19,23 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-api</artifactId>
-    <version>2.17.2</version>
-  </dependency>
-  <dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>2.17.2</version>
-  </dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.2.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-	
 	<build>
 		<sourceDirectory>src/com/qa/main</sourceDirectory>
 		<testSourceDirectory>src/com/qa/test</testSourceDirectory>
@@ -44,18 +48,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.2.0</version>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>com.qa.main.runner.Runner</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
-        </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.qa.main.runner.Runner</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-	
 </project>
